# genseq

./: README.md  pyproject.toml  test.py
genseq/dataset/: __init__.py
genseq/models/seq2seq/: model.py
genseq/tokenizer/: __init__.py  options.py  spacy.py  tokenizer_abc.py
genseq/tools/: __init__.py
genseq/tools/setup/: __init__.py
genseq/train/: __init__.py  seq2seq.py
genseq/vocab/: __init__.py  options.py  special_tokens.py  torchtext.py  vocab_abc.py
