[tool.poetry]
name = "genseq"
version = "0.1.0"
description = ""
authors = ["jcd <929760274@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
numpy = "^1.26.4"
spacy = "^3.7.4"
termcolor = "^2.4.0"
torchtext = "^0.17.1"
datasets = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
